--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
   text-align: center;
   font-size: 1.7rem;
   font-weight: bold;
-  letter-spacing: 1px;
 }
 
 .subtitle {
@@ -36,7 +35,7 @@
 }
 
 .card {
-  background: rgba(255,255,255,0.1);
+  background: rgba(255,255,255,0.12);
   backdrop-filter: blur(12px);
   border-radius: 18px;
   padding: 16px;
@@ -74,27 +73,42 @@ button {
   cursor: pointer;
 }
 
-button:active {
-  transform: scale(0.97);
+.message-item {
+  padding: 10px;
+  border-radius: 12px;
+  background: rgba(255,255,255,0.15);
+  margin-bottom: 8px;
+  cursor: pointer;
 }
 
-.message-text {
-  font-size: 1rem;
-  line-height: 1.4;
+.modal {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.6);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
 }
 
-.reply-hint {
-  margin-top: 10px;
-  text-align: right;
-  font-size: 0.8rem;
-  opacity: 0.85;
+.modal-card {
+  background: rgba(20,20,40,0.95);
+  border-radius: 18px;
+  padding: 20px;
+  max-width: 420px;
+  width: 100%;
 }
 
-.hint {
-  text-align: center;
-  font-size: 0.75rem;
-  opacity: 0.7;
-  margin-top: 10px;
+.toast {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #ff2f92;
+  padding: 10px 16px;
+  border-radius: 14px;
+  display: none;
+  font-size: 0.9rem;
 }
 
   </style>
@@ -119,6 +133,13 @@ button:active {
   </div>  <script>
     const ADMIN_KEY = "admin123"; // change this
 
+    function showToast(text) {
+      const toast = document.getElementById('toast');
+      toast.innerText = text;
+      toast.style.display = 'block';
+      setTimeout(() => toast.style.display = 'none', 2500);
+    }
+
     function sendMessage() {
       const input = document.getElementById('questionInput');
       const message = input.value.trim();
@@ -129,20 +150,29 @@ button:active {
       localStorage.setItem('messages', JSON.stringify(messages));
 
       input.value = '';
-      alert('Message sent anonymously!');
+      showToast('Message sent anonymously ⚡');
     }
 
-    // ADMIN VIEW
+    function openModal(text) {
+      document.getElementById('modalText').innerText = text;
+      document.getElementById('modal').style.display = 'flex';
+    }
+
+    function closeModal() {
+      document.getElementById('modal').style.display = 'none';
+    }
+
     const params = new URLSearchParams(window.location.search);
     if (params.get('admin') === ADMIN_KEY) {
-      document.getElementById('messageCard').style.display = 'block';
+      const list = document.getElementById('adminList');
       const messages = JSON.parse(localStorage.getItem('messages') || '[]');
-      const box = document.getElementById('messageText');
       if (messages.length === 0) {
-        box.innerText = 'No messages yet.';
+        list.innerHTML = '<div class="card">No messages yet.</div>';
       } else {
-        box.innerHTML = messages.map(m => `🃏 ${m.text}<br><small>${m.time}</small>`).join('<hr>');
+        list.innerHTML = messages.map(m => 
+          `<div class="message-item" onclick="openModal('${m.text.replace(/'/g, "\'")}')">🃏 ${m.text.slice(0,40)}...</div>`
+        ).join('');
       }
     }
   </script></body>
-</html>
+  </html>
